--- a/AutoClick/Pages/Index.cshtml
+++ b/AutoClick/Pages/Index.cshtml
@@ -946,7 +946,7 @@
                     </a>
                 }
                 <div class="index-card-ver-mas">
-                    <a href="@Url.Page("/Explorar")" class="index-card-ver-mas-btn">
+                    <a href="@Url.Page("/BusquedaAvanzada")" class="index-card-ver-mas-btn">
                         <svg class="index-card-ver-mas-icon" viewBox="0 0 30 30" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M15 5L15 25M5 15L25 15" stroke="white" stroke-width="2" stroke-linecap="round"/>
                         </svg>
