--- a/AutoClick/Pages/SobreNosotros.cshtml
+++ b/AutoClick/Pages/SobreNosotros.cshtml
@@ -6,6 +6,7 @@
 
 @section Styles {
     <link rel="stylesheet" href="~/css/sobre-nosotros.css" />
+    <link rel="stylesheet" href="~/css/sobre-nosotros-responsive.css" />
 }
 
 @await Html.PartialAsync("_Header")
